# soroban-example-dapp

./: .gitattributes  .gitignore  .nvmrc  .prettierrc  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  address_workaround.js  convert.ts  initialize.sh  mint.sh  next.config.js  package-lock.json  package.json  quickstart.sh  rust-toolchain.toml  soroban_token_contract.wasm  tsconfig.json
.cargo/: config.toml
.github/workflows/: nodejs.yml  rust.yml  update-completed-sprint-on-issue-closed.yml
assets/icons/: index.tsx
components/: AlmostUnnecessaryProvider.tsx  Pixel.tsx  ProviderExample.tsx  Tile.tsx  index.tsx
components/atoms/: index.tsx
components/atoms/amount-input/: index.tsx  style.module.css
components/atoms/author-info/: index.tsx  style.module.css
components/atoms/button/: index.tsx  style.module.css
components/atoms/card/: index.tsx  style.module.css
components/atoms/checkbox/: index.tsx  style.module.css
components/atoms/connect-button/: index.tsx  style.module.css
components/atoms/input/: index.tsx
components/atoms/loading/: index.tsx
components/atoms/progress-bar/: index.tsx  style.module.css
components/atoms/spacer/: index.tsx
components/molecules/: index.tsx
components/molecules/campaign/: index.tsx
components/molecules/deposits/: index.tsx  style.module.css
components/molecules/form-pledge/: crowdfund.ts  index.tsx  style.module.css  token.ts
components/molecules/pledge/: index.tsx  style.module.css
components/molecules/transaction-modal/: index.tsx  style.module.css
components/molecules/wallet-data/: index.tsx  style.module.css
components/organisms/: index.tsx
components/organisms/campaign/: index.tsx  style.module.css
components/organisms/pledge/: index.tsx  style.module.css
components/utils/: utils.tsx
contract/: Cargo.toml
contract/src/: lib.rs
contracts/abundance/: Cargo.toml
contracts/abundance/src/: admin.rs  allowance.rs  balance.rs  contract.rs  event.rs  lib.rs  metadata.rs  storage_types.rs  test.rs
contracts/crowdfund/: Cargo.toml
contracts/crowdfund/src/: events.rs  lib.rs  test.rs  testutils.rs
contracts/ft/: Cargo.toml  Makefile
contracts/ft/src/: admin.rs  allowance.rs  contract.rs  test.rs
contracts/token/: soroban_token_contract.wasm  soroban_token_spec.wasm
docker/: Dockerfile  build.sh
helpers/: convert.ts
helpers/xdr/: bigint-encoder.ts  errors.ts  i128.ts  index.ts  large-int.ts  xdr-type.ts
helpers/xdr/serialization/: xdr-reader.ts  xdr-writer.ts
hooks/: index.ts  useAccount.ts  useAccount.tsx  useSubscription.ts
jsonrpc/: index.ts
pages/: _app.tsx  index.tsx
pages/api/: mock.ts
public/wasm/: soroban_crowdfund_contract.wasm
shared/: constants.tsx  contracts.ts  identifiers.tsx  utils.ts  utils.tsx
styles/: Home.module.css  globals.css
wallet/: AppContext.tsx  LICENSE.wagmi  SorobanContext.tsx  Wallet.tsx  WalletChainContext.tsx  getDefaultConnectors.tsx  getDefaultWallets.tsx  index.tsx  provideWalletChains.tsx
wallet/apiProvider/: index.tsx
wallet/apiProvider/fallback/: index.tsx
wallet/components/: ConnectButton.tsx  WalletProvider.tsx  index.tsx
wallet/components/Icons/: Dropdown.tsx
wallet/connectors/: index.ts
wallet/connectors/freighter/: index.tsx
wallet/hooks/: index.tsx  useAccount.tsx  useContractValue.tsx  useIsMounted.tsx  useNetwork.tsx  useSendTransaction.tsx
wallet/soroban-react/: SorobanContext.tsx  SorobanReactProvider.tsx  index.tsx  useSorobanReact.tsx
wallet/types/: index.tsx
