[workspace]
resolver = "2"

members = [
    "contracts/crowdfund",
]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[workspace.dependencies.soroban-sdk]
version = "0.7.0"
git = "https://github.com/stellar/rs-soroban-sdk"
rev = "9b7a8da3c7f9df96c2213c3d687e79cc910e9fd9"
