[workspace]
resolver = "2"

members = [
    "contracts/*",
]

[workspace.package]
rust-version = "1.74.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[workspace.dependencies]
soroban-sdk = "20.0.0-rc2"
soroban-token-sdk = "20.0.0-rc2"
