[package]
name = "soroban-crowdfund-contract"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["export"]
export = []
testutils = ["soroban-sdk/testutils", "soroban-token-contract/testutils", "dep:ed25519-dalek", "dep:sha2", "dep:stellar-xdr"]

[dependencies]
soroban-sdk = "0.0.3"
soroban-token-contract = { version = "0.0.2", default-features = false  }
stellar-xdr = { version = "0.0.1", features = ["next", "std"], optional = true }
ed25519-dalek = { version = "1.0.1", optional = true }
sha2 = { version = "0.10.2", optional = true }

[dev_dependencies]
soroban-crowdfund-contract = { path = ".", default-features = false, features = ["testutils"] }
rand = { version = "0.7.3" }
