[package]
name = "soroban-crowdfund-contract"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "0.1.0" }
soroban-auth = { version = "0.1.0" }
stellar-xdr = { version = "0.0.6", features = ["next", "std"], optional = true }

[dev_dependencies]
soroban-sdk = { version = "0.1.0", features = ["testutils"] }
soroban-auth = { version = "0.1.0", features = ["testutils"] }
rand = { version = "0.7.3" }
